# ML-LOG-ANALYZER

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml  requirements.txt
api/: main.py
core/: logging.py  models.py  normalization.py  settings.py
detectors/: base.py  baseline.py  isolation_forest.py  registry.py
grafana/dashboards/: anomalies.json
grafana/provisioning/datasources/: datasource.yml
prometheus/: prometheus.yml
scripts/: generate_attacks.py  generate_logs.py  ingest_file.py  train.py  train_large.py  validate_model.py
services/: anomaly_service.py  features.py  ingestion.py  mitre.py  parsers.py  storage.py  synthetic.py  training.py
tests/: conftest.py  test_api.py  test_features.py  test_integration.py  test_mitre.py  test_models.py  test_normalization.py  test_parsers.py
