[project]
name = "log-anomaly-detector"
version = "1.0.0"
description = "ML-based anomaly detection for nginx access logs with MITRE ATT&CK classification"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.11",
  "pydantic-settings>=2.13",
  "python-dotenv>=1.1",
  "numpy>=2.2",
  "scikit-learn>=1.6",
  "joblib>=1.5",
  "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "pytest-cov>=7.0",
  "pytest-asyncio>=1.0",
  "httpx>=0.28",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --tb=short"
testpaths = ["tests"]
